Add exp complication update app

--- a/complications WatchKit Extension/Info.plist
+++ b/complications WatchKit Extension/Info.plist
@@ -41,11 +41,15 @@
 		<key>NSExtensionAttributes</key>
 		<dict>
 			<key>WKAppBundleIdentifier</key>
-			<string>com.savrlabs.experiments.complications.watchkitapp</string>
+			<string>com.goklue.exp.complications.watchkit</string>
 		</dict>
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.watchkit</string>
 	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>WKExtensionDelegateClassName</key>
 	<string>$(PRODUCT_MODULE_NAME).ExtensionDelegate</string>
 </dict>
