--- a/complications WatchKit App/Info.plist
+++ b/complications WatchKit App/Info.plist
@@ -26,7 +26,7 @@
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 	<key>WKCompanionAppBundleIdentifier</key>
-	<string>com.savrlabs.experiments.complications</string>
+	<string>com.goklue.exp.complications</string>
 	<key>WKWatchKitApp</key>
 	<true/>
 </dict>
